Use xi:include to cut down on misleading exceptions in jb-core tests (#2539)

--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -72,10 +72,14 @@ with what features/services are supported.
     <depends optional="true">Docker</depends>
     <depends optional="true" config-file="ext-java.xml">com.intellij.modules.java</depends>
     <depends optional="true" config-file="ext-python.xml">com.intellij.modules.python</depends>
-    <depends optional="true" config-file="ext-nodejs.xml">JavaScriptDebugger</depends>
-    <depends optional="true" config-file="ext-rider.xml">com.intellij.modules.rider</depends>
-    <depends optional="true" config-file="ext-datagrip.xml">com.intellij.database</depends>
-    <depends optional="true" config-file="ext-go.xml">org.jetbrains.plugins.go</depends>
+
+    <xi:include href="/META-INF/IU.xml" xpointer="xpointer(/idea-plugin/*)">
+        <xi:fallback/>
+    </xi:include>
+
+    <xi:include href="/META-INF/RD.xml" xpointer="xpointer(/idea-plugin/*)">
+        <xi:fallback/>
+    </xi:include>
 
     <xi:include href="/META-INF/change-notes.xml" xpointer="xpointer(/idea-plugin/*)">
         <xi:fallback/>
